--- a/install
+++ b/install
@@ -1,52 +1,67 @@
 #!/bin/bash
-# Variable and constant declaration
+
+###############################################################################
+# Variable and Constant Declaration
+###############################################################################
+
+# Current directory absolute path
 curDir=$(dirname "$(realpath "$0")")
 
-# Function
-## Function to install Homebrew
+
+###############################################################################
+# Function Declaration
+###############################################################################
+
+# Install Homebrew
 install_homebrew() {
-    echo "Installing Homebrew..."
-    /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+	if ! command -v brew &> /dev/null; then
+    	echo "Installing Homebrew..."
+		/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+	else
+    	echo "Homebrew is already installed."
+	fi
 }
 
-## Function to install Nix
+# Install Nix
 install_nix() {
-    echo "Installing Nix..."
-    sh <(curl -L https://nixos.org/nix/install) --daemon
+    if [ ! -e "/Library/LaunchDaemons/org.nixos.darwin-store.plist" ] && ! command -v nix &> /dev/null; then
+		echo "Installing Nix..."
+    	sh <(curl -L https://nixos.org/nix/install) --daemon
+	else
+    	echo "Nix is already installed."
+	fi
 }
 
-## Function to install Home Manager
+# Install Home Manager
 install_home_manager() {
-    echo "Installing Home Manager..."
-    nix-channel --add https://github.com/nix-community/home-manager/archive/release-24.05.tar.gz home-manager
-    nix-channel --update
-    nix-shell '<home-manager>' -A install
+    if ! nix-env --query --installed | grep -q home-manager; then
+    	echo "Installing Home Manager..."
+    	nix-channel --add https://github.com/nix-community/home-manager/archive/release-24.05.tar.gz home-manager
+    	nix-channel --update
+    	nix-shell '<home-manager>' -A install
+	else
+    	echo "Home Manager is already installed."
+	fi
+}
+
+# Link with Home Manager
+link_with_home_manager() {
+	echo "Linking with Home Manager..."
+	ln -sf $curDir/host/macbook/home.nix $HOME/.config/home-manager/home.nix
 }
 
 
+###############################################################################
 # Executable
-## Check if Homebrew is installed
-if ! command -v brew &> /dev/null; then
-    install_homebrew
-else
-    echo "Homebrew is already installed."
-fi
+###############################################################################
 
-## Check if Nix is installed
-if [ ! -e "/Library/LaunchDaemons/org.nixos.darwin-store.plist" ] && ! command -v nix &> /dev/null; then
-    install_nix
-else
-    echo "Nix is already installed."
-fi
+# Install
+install_homebrew
+install_nix
+install_home_manager
 
-# Check if Home Manager is installed
-if ! nix-env --query --installed | grep -q home-manager; then
-    install_home_manager
-else
-    echo "Home Manager is already installed."
-fi
+# Link with Home Manager
+link_with_home_manager
 
-echo "Linking with Home Manager..."
-ln -sf $curDir/host/macbook/home.nix $HOME/.config/home-manager/home.nix
-
+# Log
 echo "Installation complete."
