--- a/install
+++ b/install
@@ -30,8 +30,8 @@ configure_git_hooks() {
 					'\nHERE="$(cd "$(dirname "$0")" && pwd)"'\
 					'\nARGS+=(--hook-dir "$HERE" -- "$@")'\
 					'\n'\
-					'\nexec pre-commit "${ARGS[@]}"' > $DIR_CUR/.git/hooks/pre-commit
-	chmod a+x $DIR_CUR/.git/hooks/pre-commit
+					'\nexec pre-commit "${ARGS[@]}"' > "$DIR_CUR"/.git/hooks/pre-commit
+	chmod a+x "$DIR_CUR"/.git/hooks/pre-commit
 	echo -e "$STR_UNVX $STR_CONF Git Hooks: $STR_DONE"
 }
 
@@ -73,7 +73,7 @@ install_nix() {
 
 # Link with Home Manager
 link_with_home_manager() {
-	ln -sf $DIR_CUR/host/macbook/home.nix $HOME/.config/home-manager/home.nix
+	ln -sf "$DIR_CUR"/host/macbook/home.nix "$HOME"/.config/home-manager/home.nix
 	echo -e "$STR_UNVX $STR_LINK Home Manager: $STR_DONE"
 }
 
